--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ PORT=5000
 JWT_SECRET=salainensalasana
 JWT_EXPIRATION_TIME=600
 ADMIN_PASSWORD=SECRETPASSWORD
+EMAIL_FROM=SENTFROM@EXAMPLE.com
+EMAIL_TO=SENTTO@EXAMPLE.COM
+EMAIL_PW=EXAMPLEPW
